@@ -450,7 +450,7 @@ sodipodi
 	can_open_multiple_files=true
 	expects_uris=false
 	requires_terminal=false
-	mime_types=image/svg
+	mime_types=image/svg,image/svg+xml
 
 soundtracker
 	command=soundtracker
